--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Indore</h1><hr>
+	<p>
+		Indore is known for cleanest , food, job , career and many more. Indore city holds the title of six times cleanest city.
+	</p>
+	<ol>
+		<li><b>Rajwada Palace</b></li>
+		<li><i>Khajuri Market</i></li>
+		<li><strong>Tinchaa Waterfall</strong></li>
+		<li><em>Best Coaching</em></li>
+		<li><b>Red Light</b></li>
+	</ol>
+	<ul>
+		<li><b>Poha</b></li>
+		<li><b>Chaai</b></li>
+		<li><i>Sandwich</i></li>
+		<li><em>Namkeen</em></li>
+		<li><strong>Pizza</strong></li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
